syntax = "proto3";

package user_service;

import "user_service/user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "grpc/v1/user_service";

message SigninRequest {
    string username = 1;
    string password = 2;
}

message SigninResponse {
    User user = 1;
    int32 session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}